fix: Wrap the text and icon in resume link action

--- a/src/styles/links-container.css
+++ b/src/styles/links-container.css
@@ -80,9 +80,12 @@
     flex-direction: column;
     align-items: center;
     gap: 4px;
-
+    color: white;
+    text-decoration: none;
+   
     h3 {
       cursor: pointer;
+      opacity: 1;
     }
 
     &:hover {
